chimp_CXXFLAGS = -I$(top_srcdir)/src

bin_PROGRAMS = chimp

chimp_SOURCES = ch_protocol.cc \
                ch_protocol.h \
                ch_handlers.h \
                ch_handler_dsnew.cc \
                ch_client.h \
                ch_client.cc \
                ch_log.cc \
                ch_log.h \
                ch_row.cc \
                ch_row.h \
                ch_table.cc \
                ch_table.h \
                ch_chimpd.h \
                ch_dataset.h \
                ch_dataset.cc \
                transport/command/abstract_command.h \
                transport/command/abstract_command.cc \
                transport/command/ping.h \
                transport/command/ping.cc \
                transport/server.h \
                transport/server.cc \
                main.cc
