chimp_CXXFLAGS = -I$(top_srcdir)/src

bin_PROGRAMS = chimp

chimp_SOURCES = ch_log.cc \
                ch_log.h \
                ch_row.cc \
                ch_row.h \
                ch_table.cc \
                ch_table.h \
                ch_chimpd.h \
                ch_dataset.h \
                ch_dataset.cc \
                transport/abstract_response.h \
                transport/abstract_response.cc \
                transport/error_response.h \
                transport/error_response.cc \
                transport/command/abstract_command.h \
                transport/command/abstract_command.cc \
                transport/command/ping.h \
                transport/command/ping.cc \
                transport/command/dsnew.h \
                transport/command/dsnew.cc \
                transport/server.h \
                transport/server.cc \
                transport/client.h \
                transport/client.cc \
                main.cc
